--- a/static/index.html
+++ b/static/index.html
@@ -4,15 +4,36 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css" media="screen" />
 </head>
 
 <body>
-    <input id="movie1" type="text" name="movie1" onchange="searchMovies()">
-    <table id="results" style="width:100%;visibility:hidden">
-        <tr>
-            <th>Movie</th>
-            <th>Release Date</th>
-            <th>Cast summary</th>
-        </tr>
-    </table>
+    <div class="split left">
+        <div class="centered">
+            <input id="movie1" type="text" name="movie1" onchange="searchMovies(event)" >
+            <div class="hidden">
+                <table id="results1">
+                    <tr>
+                        <th>Movie</th>
+                        <th>Release Date</th>
+                        <th>Cast summary</th>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="split right">
+        <div class="centered">
+            <input id="movie2" type="text" name="movie2" onchange="searchMovies(event)" >
+            <div class="hidden">
+                <table id="results2">
+                    <tr>
+                        <th>Movie</th>
+                        <th>Release Date</th>
+                        <th>Cast summary</th>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
 </body>
