fisrt iteration in order to search for the cast in one selected film

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
                     <tr>
                         <th>Movie</th>
                         <th>Release Date</th>
+                        <th>Select</th>
                     </tr>
                 </table>
             </div>
@@ -29,6 +30,7 @@
                     <tr>
                         <th>Movie</th>
                         <th>Release Date</th>
+                        <th>Select</th>
                     </tr>
                 </table>
             </div>
