clean the table in case of a new search

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
             <input id="movie1" type="text" name="movie1" onchange="searchMovies(event)" >
             <div class="hidden">
                 <table id="results1">
-                    <tr>
+                    <tr class="table-header">
                         <th>Movie</th>
                         <th>Release Date</th>
                         <th>Select</th>
@@ -27,7 +27,7 @@
             <input id="movie2" type="text" name="movie2" onchange="searchMovies(event)" >
             <div class="hidden">
                 <table id="results2">
-                    <tr>
+                    <tr class="table-header">
                         <th>Movie</th>
                         <th>Release Date</th>
                         <th>Select</th>
