--- a/static/index.html
+++ b/static/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="split left">
         <div class="centered">
-            <input id="movie1" type="text" name="movie1" onchange="searchMovies(event)" >
+            <input id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
             <div class="hidden">
-                <table id="results1">
+                <table id="results-left">
                     <tr class="table-header">
                         <th>Movie</th>
                         <th>Release Date</th>
@@ -24,9 +24,9 @@
     </div>
     <div class="split right">
         <div class="centered">
-            <input id="movie2" type="text" name="movie2" onchange="searchMovies(event)" >
+            <input id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
             <div class="hidden">
-                <table id="results2">
+                <table id="results-right">
                     <tr class="table-header">
                         <th>Movie</th>
                         <th>Release Date</th>
