--- a/static/index.html
+++ b/static/index.html
@@ -11,28 +11,34 @@
     <div class="split left">
         <div class="centered" id="left-body">
             <input id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
-            <div class="hidden">
-                <table id="results-left" data-align="left">
-                    <tr class="table-header">
-                        <th>Movie</th>
-                        <th>Release Date</th>
-                        <th>Select</th>
-                    </tr>
-                </table>
+            <div>
+                <div id="left-board" class="results"></div>
+                <div>
+                    <table id="results-left" data-align="left" class="results">
+                        <tr class="table-header">
+                            <th>Movie</th>
+                            <th>Release Date</th>
+                            <th>Select</th>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
     <div class="split right">
         <div class="centered" id="right-body">
             <input id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
-            <div class="hidden">
-                <table id="results-right" data-align="right">
-                    <tr class="table-header">
-                        <th>Movie</th>
-                        <th>Release Date</th>
-                        <th>Select</th>
-                    </tr>
-                </table>
+            <div class="results">
+                <div id="right-board"class="results"></div>
+                <div>
+                    <table id="results-right" data-align="right" class="results">
+                        <tr class="table-header">
+                            <th>Movie</th>
+                            <th>Release Date</th>
+                            <th>Select</th>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
