--- a/static/index.html
+++ b/static/index.html
@@ -4,42 +4,47 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <script src="main.js"></script>
-    <link rel="stylesheet" href="style.css" media="screen" />
+    <link rel="stylesheet" href="bulma.min.css" media="screen" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <div class="split left">
-        <div class="centered" id="left-body">
-            <input id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
-            <div>
-                <div id="left-board" class="results"></div>
+<div class="container">
+    <nav class="level">
+        <div class="level-item has-text-centered">
+            <div id="left-body">
+                <input  class="input is-rounded" id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
                 <div>
-                    <table id="results-left" data-align="left" class="results">
-                        <tr class="table-header">
-                            <th>Movie</th>
-                            <th>Release Date</th>
-                            <th>Select</th>
-                        </tr>
-                    </table>
+                    <div id="left-board" class="results"></div>
+                    <div>
+                        <table id="results-left" data-align="left" class="results">
+                            <tr class="table-header">
+                                <th>Movie</th>
+                                <th>Release Date</th>
+                                <th>Select</th>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="split right">
-        <div class="centered" id="right-body">
-            <input id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
-            <div class="results">
-                <div id="right-board"class="results"></div>
-                <div>
-                    <table id="results-right" data-align="right" class="results">
-                        <tr class="table-header">
-                            <th>Movie</th>
-                            <th>Release Date</th>
-                            <th>Select</th>
-                        </tr>
-                    </table>
+        <div class="level-item has-text-centered">
+            <div class="centered" id="right-body">
+                <input  class="input is-rounded" id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
+                <div class="results">
+                    <div id="right-board"class="results"></div>
+                    <div>
+                        <table id="results-right" data-align="right" class="results">
+                            <tr class="table-header">
+                                <th>Movie</th>
+                                <th>Release Date</th>
+                                <th>Select</th>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </nav>
+</div>
 </body>
