--- a/static/index.html
+++ b/static/index.html
@@ -9,42 +9,54 @@
 </head>
 
 <body>
-<div class="container">
-    <nav class="level">
-        <div class="level-item has-text-centered">
-            <div id="left-body">
-                <input  class="input is-rounded" id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
-                <div>
-                    <div id="left-board" class="results"></div>
+    <section class="hero">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">
+                    Cast Comparer
+                </h1>
+                <h2 class="subtitle">
+                    The easy way to match the cast of two movies or shows
+                </h2>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <nav class="level">
+            <div class="level-item has-text-centered">
+                <div id="left-body">
+                    <input  class="input is-rounded" id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
                     <div>
-                        <table id="results-left" data-align="left" class="results">
-                            <tr class="table-header">
-                                <th>Movie</th>
-                                <th>Release Date</th>
-                                <th>Select</th>
-                            </tr>
-                        </table>
+                        <div id="left-board" class="results"></div>
+                        <div>
+                            <table id="results-left" data-align="left" class="results">
+                                <tr class="table-header">
+                                    <th>Movie</th>
+                                    <th>Release Date</th>
+                                    <th>Select</th>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="level-item has-text-centered">
-            <div class="centered" id="right-body">
-                <input  class="input is-rounded" id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
-                <div class="results">
-                    <div id="right-board"class="results"></div>
-                    <div>
-                        <table id="results-right" data-align="right" class="results">
-                            <tr class="table-header">
-                                <th>Movie</th>
-                                <th>Release Date</th>
-                                <th>Select</th>
-                            </tr>
-                        </table>
+            <div class="level-item has-text-centered">
+                <div class="centered" id="right-body">
+                    <input  class="input is-rounded" id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
+                    <div class="results">
+                        <div id="right-board"class="results"></div>
+                        <div>
+                            <table id="results-right" data-align="right" class="results">
+                                <tr class="table-header">
+                                    <th>Movie</th>
+                                    <th>Release Date</th>
+                                    <th>Select</th>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
-</div>
+        </nav>
+    </div>
 </body>
