--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="hero">
+    <section class="hero has-background-warning">
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
@@ -21,11 +21,12 @@
             </div>
         </div>
     </section>
-    <div class="container">
         <nav class="level">
-            <div class="level-item has-text-centered">
+            <div class="level-item has-text-centered has-background-link">
                 <div id="left-body">
-                    <input  class="input is-rounded" id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
+                    <div class="control">
+                        <input  class="input is-focused" id="movie-left" type="text" name="movie1" onchange="searchMovies(event)" >
+                    </div>
                     <div>
                         <div id="left-board" class="results"></div>
                         <div>
@@ -40,9 +41,11 @@
                     </div>
                 </div>
             </div>
-            <div class="level-item has-text-centered">
+            <div class="level-item has-text-centered has-background-info">
                 <div class="centered" id="right-body">
-                    <input  class="input is-rounded" id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
+                    <div class="control">
+                        <input  class="input is-focused" id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
+                    </div>
                     <div class="results">
                         <div id="right-board"class="results"></div>
                         <div>
