Remove buggy css class on right div

--- a/static/index.html
+++ b/static/index.html
@@ -46,11 +46,11 @@
                 </div>
             </div>
             <div class="column is-half has-text-centered">
-                <div class="centered" id="right-body">
+                <div id="right-body">
                     <div class="control">
                         <input  class="input is-rounded" id="movie-right" type="text" name="movie2" onchange="searchMovies(event)" >
                     </div>
-                    <div class="results">
+                    <div>
                         <div id="right-board" class="results content"></div>
                             <table id="results-right" data-align="right" class="results table is-fullwidth">
                                 <thead>
